Revision history for OpenTelemetry-SDK

0.022     2024-04-19 11:46:54+01:00 Europe/London

    * Do not call start on the background function in the batch span
      processor, this is handled automatically by the loop (GH #13)

0.021     2023-12-03 14:46:29+00:00 Europe/London

    * Clarify meaning of OTEL_BSP_EXPORT_TIMEOUT in POD
    * Minor correction in Resource POD

0.020     2023-11-26 16:18:52+00:00 Europe/London

    * Switch Metrics::Any client to strict mode, to allow for automatic
      metric name generation. This means the metrics can be exported
      with adapters that don't allow periods (eg. Prometheus). This
      means some metrics had to be renamed:
      - otel.bsp.export.success -> otel.bsp.success
      - otel.bsp.export.failure -> otel.bsp.failure
      - otel.bsp.dropped_spans -> otel.bsp.spans.dropped
      - otel.bsp.exported_spans -> otel.bsp.spans.processed
      - otel.bsp.buffer_utilization -> otel.bsp.buffer.utilization

0.019     2023-11-23 19:31:08+00:00 Europe/London

    * Validate span processors when adding them to the TracerProvider
    * Shutting down a TracerProvider that has been shutdown is not
      en error and no longer warns
    * Add documentation for TracerProvider's add_span_processor
    * Make all shutdown and force_flush methods async for consistency
    * Remove lock from span to avoid running into file descriptor
      limits (GH #8)

0.018     2023-11-21 21:42:57+00:00 Europe/London

    * Ensure shutdown and force_flush calls on the TracerProvider
      wait for the resuts of propagating those calls down to the
      processors
    * Bump minimum version of OpenTelemetry to 0.010 for the
      implementation of the API
    * Fix an issue with reporting dropped spans due to improper
      scalar conversion
    * Fix an issue in the documentation of the OTEL_TRACES_EXPORTER
      variable and add some additional details

0.017     2023-11-20 21:37:36+00:00 Europe/London
