@@ -97,9 +97,25 @@ Called when a span is started. In this class, this method does nothing.
 
     $processor->on_end( $span );
 
-Called when a span is ended. Calling this will convert the span into a
-readable instance and queue it for eventual exporting. Once enough spans
-have been queued, a batch of them will be sent to the configured exporter.
+Called when a span is ended, with the span that has just ended as its only
+parameter. This should be called I<after> the span has been ended.
+
+This method internally passes the span to L</process>, described in more
+detail below.
+
+=head2 process
+
+    $processor->process( @spans );
+
+Takes a list of spans that are ready for processing. Once called, this method
+will convert them into a readable instances and queue them for eventual
+exporting. Once enough spans have been queued, a batch of them will be sent
+to the configured exporter.
+
+This processor batches spans for eventual processing, which can sometimes make
+for more complicated debugging. For a simpler processor that handles each span
+as it becomes ready and blocks during the export step, see
+L<OpenTelemetry::SDK::Trace::Processor::Simple>.
 
 =head2 force_flush
 
@@ -206,6 +222,8 @@ Incremented every time the span processing completed successfully.
 =item L<OpenTelemetry::Trace::Span>
 
 =item L<OpenTelemetry::Trace::Span::Processor>
+
+=item L<OpenTelemetry::Trace::Span::Processor::Simple>
 
 =back
 
